@@ -11,7 +11,7 @@ use App\BusinessLocation;
 class Account extends Model
 {
     use SoftDeletes;
-    
+
     protected $guarded = ['id'];
 
     /**
@@ -22,17 +22,24 @@ class Account extends Model
     protected $casts = [
         'account_details' => 'array',
     ];
-    
-    public static function forDropdown($business_id, $prepend_none, $closed = false, $show_balance = false)
-    {
-        $query = Account::where('business_id', $business_id);
 
+
+    public static function forDropdown_cheque($business_id, $prepend_none, $closed = false, $show_balance = false)
+    {
+
+        $cheques_accounts = AccountType::where('business_id', $business_id)
+            ->where('cheque', 1)->get();
+        $active_ = [];
+        foreach ($cheques_accounts as  $cheques_account) {
+            array_push($active_, $cheques_account->id);
+        }
+        $query = Account::where('business_id', $business_id)->whereIn('account_type_id', $active_);
         $permitted_locations = auth()->user()->permitted_locations();
-            $account_ids = [];
+        $account_ids = [];
         if ($permitted_locations != 'all') {
             $locations = BusinessLocation::where('business_id', $business_id)
-                            ->whereIn('id', $permitted_locations)
-                            ->get();
+                ->whereIn('id', $permitted_locations)
+                ->get();
 
             foreach ($locations as $location) {
                 if (!empty($location->default_payment_accounts)) {
@@ -58,10 +65,78 @@ class Account extends Model
             //     $join->on('AT.account_id', '=', 'accounts.id');
             //     $join->whereNull('AT.deleted_at');
             // })
-            $query->select('accounts.name', 
-                    'accounts.id', 
-                    DB::raw("(SELECT SUM( IF(account_transactions.type='credit', amount, -1*amount) ) as balance from account_transactions where account_transactions.account_id = accounts.id AND deleted_at is NULL) as balance")
-                );
+            $query->select(
+                'accounts.name',
+                'accounts.id',
+                DB::raw("(SELECT SUM( IF(account_transactions.type='credit', amount, -1*amount) ) as balance from account_transactions where account_transactions.account_id = accounts.id AND deleted_at is NULL) as balance")
+            );
+        }
+
+        if (!$closed) {
+            $query->where('is_closed', 0);
+        }
+
+        $accounts = $query->get();
+
+        $dropdown = [];
+        if ($prepend_none) {
+            $dropdown[''] = __('lang_v1.none');
+        }
+
+        $commonUtil = new Util;
+        foreach ($accounts as $account) {
+            $name = $account->name;
+
+            if ($can_access_account && $show_balance) {
+                $name .= ' (' . __('lang_v1.balance') . ': ' . $commonUtil->num_f($account->balance) . ')';
+            }
+
+            $dropdown[$account->id] = $name;
+        }
+
+        return $dropdown;
+    }
+
+    public static function forDropdown($business_id, $prepend_none, $closed = false, $show_balance = false)
+    {
+        $query = Account::where('business_id', $business_id);
+
+        $permitted_locations = auth()->user()->permitted_locations();
+        $account_ids = [];
+        if ($permitted_locations != 'all') {
+            $locations = BusinessLocation::where('business_id', $business_id)
+                ->whereIn('id', $permitted_locations)
+                ->get();
+
+            foreach ($locations as $location) {
+                if (!empty($location->default_payment_accounts)) {
+                    $default_payment_accounts = json_decode($location->default_payment_accounts, true);
+                    foreach ($default_payment_accounts as $key => $account) {
+                        if (!empty($account['is_enabled']) && !empty($account['account'])) {
+                            $account_ids[] = $account['account'];
+                        }
+                    }
+                }
+            }
+
+            $account_ids = array_unique($account_ids);
+        }
+
+        if ($permitted_locations != 'all') {
+            $query->whereIn('accounts.id', $account_ids);
+        }
+
+        $can_access_account = auth()->user()->can('account.access');
+        if ($can_access_account && $show_balance) {
+            // $query->leftjoin('account_transactions as AT', function ($join) {
+            //     $join->on('AT.account_id', '=', 'accounts.id');
+            //     $join->whereNull('AT.deleted_at');
+            // })
+            $query->select(
+                'accounts.name',
+                'accounts.id',
+                DB::raw("(SELECT SUM( IF(account_transactions.type='credit', amount, -1*amount) ) as balance from account_transactions where account_transactions.account_id = accounts.id AND deleted_at is NULL) as balance")
+            );
         }
 
         if (!$closed) {
